--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header"></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div class="footer"></div>
 </body>
 </html>
