Created links for header section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <div class="header"></div>
-    <div></div>
+    <div class="header">
+        <li>
+            <ul><a class="logo">Logo</a></ul>
+            <ul><a class="linkone">Home</a></ul>
+            <ul><a class="linktwo">Sign Up</a></ul>
+            <ul><a class="linkthree">Team</a></ul>
+            <ul><a class="lnkfour">Data Protection Policy</a></ul>
+            <ul><a class="linkfive">Privacy Policy</a></ul>
+            <ul><a class="linksix">Support</a></ul>
+        </li>
+    </div>
+    <div class="hero">
+        <div>
+            <div>Making Bankers out of Savers</div>
+            <div>Savup is creating a place where you can unite with others to create an army of successful savers</div>
+            <div><Button>Sign up</Button></div>
+        </div>
+        <div><img src="" alt=""></div>
+    </div>
     <div></div>
     <div></div>
     <div></div>
