Drafted key messages for the various sections and the footer

--- a/index.html
+++ b/index.html
@@ -15,21 +15,43 @@
             <ul><a class="linktwo">Sign Up</a></ul>
             <ul><a class="linkthree">Team</a></ul>
             <ul><a class="lnkfour">Data Protection Policy</a></ul>
-            <ul><a class="linkfive">Privacy Policy</a></ul>
-            <ul><a class="linksix">Support</a></ul>
+            <ul><a class="linkfive">Support</a></ul>
         </li>
     </div>
     <div class="hero">
         <div>
-            <div>Making Bankers out of Savers</div>
-            <div>Savup is creating a place where you can unite with others to create an army of successful savers</div>
+            <div class="promone">Making Bankers out of Savers</div>
+            <div class="promotwo">Savup is creating a place where you can unite with others to create an army of successful savers</div>
             <div><Button>Sign up</Button></div>
         </div>
         <div><img src="" alt=""></div>
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div class="footer"></div>
+    <div>
+        <div class="promothree">Savup allows you to plant a financial seed today and watch it grow into a money tree</div>
+        <div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+        </div>
+        <div class="promofour">Open an account, set your savings goal, and start investing with just a few clicks</div>
+    </div>
+    <div>
+        <div class="quoteone">
+            It's not how much you make, but how much you keep, how hard it works for and how many generations you keep it for
+        </div>
+        <div class="author">
+            - Robert Kiyosaki
+        </div>
+    </div>
+    <div>
+        <div>We are expanding our better group!</div>
+        <div>Be at the top of the list by signing up now!</div>
+        <div><button>Sign up</button></div>
+    </div>
+    <div class="footer">
+        <div class="rights">All Rights Reserved | All Wrongs Reversed</div>
+        <div class="conditions"><a>Terms & Conditions | Privacy Policy | Disclaimer</a></div>
+        <div>Copyright &copy; STY-Holdings Inc, its affiliates, assigns and licensors</div>
+    </div>
 </body>
 </html>
