Gave header, footer and first section height. Added color

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
     <div class="header">
         <li>
+            <div>
             <ul><a class="logo">Logo</a></ul>
+            </div>
+            <div>
             <ul><a class="linkone">Home</a></ul>
             <ul><a class="linktwo">Sign Up</a></ul>
             <ul><a class="linkthree">Team</a></ul>
             <ul><a class="lnkfour">Data Protection Policy</a></ul>
             <ul><a class="linkfive">Support</a></ul>
+            </div>
         </li>
     </div>
     <div class="hero">
