Styled promo texts and button in the first section

--- a/index.html
+++ b/index.html
@@ -9,24 +9,20 @@
 </head>
 <body>
     <div class="header">
-        <li>
-            <div>
-            <ul><a class="logo">Logo</a></ul>
-            </div>
-            <div>
-            <ul><a class="linkone">Home</a></ul>
-            <ul><a class="linktwo">Sign Up</a></ul>
-            <ul><a class="linkthree">Team</a></ul>
-            <ul><a class="lnkfour">Data Protection Policy</a></ul>
-            <ul><a class="linkfive">Support</a></ul>
-            </div>
-        </li>
+        <div class="logo">Logo</div>
+        <ul>
+            <li><a class="linkone">Home</a></li>
+            <li><a class="linktwo">Sign Up</a></li>
+            <li><a class="linkthree">Team</a></li>
+            <li><a class="lnkfour">Data Protection Policy</a></li>
+            <li><a class="linkfive">Support</a></li> 
+        </ul>
     </div>
     <div class="hero">
         <div>
             <div class="promone">Making Bankers out of Savers</div>
             <div class="promotwo">Savup is creating a place where you can unite with others to create an army of successful savers</div>
-            <div><Button>Sign up</Button></div>
+            <div><Button class="button">Sign up</Button></div>
         </div>
         <div><img src="" alt=""></div>
     </div>
