--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
         <div><img src="" alt=""></div>
     </div>
     <div>
-        <div class="promothree">Savup allows you to plant a financial seed today and watch it grow into a money tree</div>
+        <div class="promothree">Open an account, set your savings goal, and start investing with just a few clicks</div>
         <div>
             <div><img src="" alt=""></div>
             <div><img src="" alt=""></div>
             <div><img src="" alt=""></div>
         </div>
-        <div class="promofour">Open an account, set your savings goal, and start investing with just a few clicks</div>
     </div>
-    <div>
+    <div class="quote">
         <div class="quoteone">
             It's not how much you make, but how much you keep, how hard it works for and how many generations you keep it for
         </div>
@@ -51,7 +50,7 @@
     <div class="footer">
         <div class="rights">All Rights Reserved | All Wrongs Reversed</div>
         <div class="conditions"><a>Terms & Conditions | Privacy Policy | Disclaimer</a></div>
-        <div>Copyright &copy; STY-Holdings Inc, its affiliates, assigns and licensors</div>
+        <div>Copyright &copy; Mobcash Inc, its affiliates, assigns and licensors</div>
     </div>
 </body>
 </html>
