Styled the call to action section with padding and added flex

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
             - Robert Kiyosaki
         </div>
     </div>
-    <div>
+    <div class="callaction">
+        <div class="messages">
         <div>We are expanding our better group!</div>
         <div>Be at the top of the list by signing up now!</div>
-        <div><button>Sign up</button></div>
+        </div>
+        <div class="buttontwo"><button>Sign up</button></div>
     </div>
     <div class="footer">
         <div class="rights">All Rights Reserved | All Wrongs Reversed</div>
