Styled steps section with flex

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         </div>
         <div><img src="" alt=""></div>
     </div>
-    <div>
+    <div class="steps">
         <div class="promothree">Open an account, set your savings goal, and start investing with just a few clicks</div>
-        <div>
+        <div class="imagesteps">
+            <div><img src="" alt=""></div>
             <div><img src="" alt=""></div>
             <div><img src="" alt=""></div>
             <div><img src="" alt=""></div>
