Styled buttons and quotes section

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         <div>
             <div class="promone">Making Bankers out of Savers</div>
             <div class="promotwo">Savup is creating a place where you can unite with others to create an army of successful savers</div>
-            <div><Button class="button">Sign up</Button></div>
+            <Button class="button">Sign up</Button>
         </div>
         <div><img src="" alt=""></div>
     </div>
     <div class="steps">
         <div class="promothree">Open an account, set your savings goal, and start investing with just a few clicks</div>
         <div class="imagesteps">
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
         </div>
     </div>
-    <div class="quote">
-        <div class="quoteone">
+    <div class="quotes">
+        <div class="quote">
             It's not how much you make, but how much you keep, how hard it works for and how many generations you keep it for
         </div>
         <div class="author">
