Modified width of quote

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             - Robert Kiyosaki
         </div>
     </div>
-    <div class="callaction">
+    <div class="action">
         <div class="messages">
         <div>We are expanding our better group!</div>
         <div>Be at the top of the list by signing up now!</div>
