Added and styled hero section image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="promotwo">Savup is creating a place where you can unite with others to create an army of successful savers</div>
             <Button class="button">Sign up</Button>
         </div>
-        <div><img src="" alt=""></div>
+        <div><img class="saving" src="assets/mansaving.jpg" alt="Man saving"></div>
     </div>
     <div class="steps">
         <div class="promothree">Open an account, set your savings goal, and start investing with just a few clicks</div>
