Image assets for steps section added and styled

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class="steps">
         <div class="promothree">Open an account, set your savings goal, and start investing with just a few clicks</div>
         <div class="imagesteps">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <div class="register"><img src="assets/register.jpg" alt="Register">1. Register</div>
+            <div class="bank"><img src="assets/connectbank.jpg" alt="Connect bank">2. Connect to bank</div>
+            <div class="goal"><img src="assets/savinggoal.jpg" alt="Set saving goal">3. Set saving goal</div>
+            <div class="growth"><img src="assets/moneygrowth.jpg" alt="Money growth">4. Sit back and watch your money grow</div>
         </div>
     </div>
     <div class="quotes">
