--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="register"><img src="assets/register.jpg" alt="Register">1. Register</div>
             <div class="bank"><img src="assets/connectbank.jpg" alt="Connect bank">2. Connect to bank</div>
             <div class="goal"><img src="assets/savinggoal.jpg" alt="Set saving goal">3. Set saving goal</div>
-            <div class="growth"><img src="assets/moneygrowth.jpg" alt="Money growth">4. Sit back and watch your money grow</div>
+            <div class="growth"><img src="assets/moneygrowth.jpg" alt="Money growth">4. Watch your money grow</div>
         </div>
     </div>
     <div class="quotes">
