Styled hero section and added padding to steps

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </ul>
     </div>
     <div class="hero">
-        <div>
+        <div class="top-message">
             <div class="promone">Making Bankers out of Savers</div>
-            <div class="promotwo">Savup is creating a place where you can unite with others to create an army of successful savers</div>
+            <div class="promotwo">Mobcash is creating a place where you can unite with others to create an army of successful savers</div>
             <Button class="button">Sign up</Button>
         </div>
         <div><img class="saving" src="assets/mansaving.jpg" alt="Man saving"></div>
