--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     </div>
     <div class="hero">
         <div class="top-message">
-            <div class="promone">Making Bankers out of Savers</div>
-            <div class="promotwo">Mobcash is creating a place where you can unite with others to create an army of successful savers</div>
-            <Button class="button">Sign up</Button>
+            <div class="message-one">Making Bankers out of Savers</div>
+            <div class="message-two">Mobcash is creating a place where you can unite with others to create an army of successful savers</div>
+            <Button class="default">Sign up</Button>
         </div>
         <div><img class="saving" src="assets/mansaving.jpg" alt="Man saving"></div>
     </div>
     <div class="steps">
-        <div class="promothree">Open an account, set your savings goal, and start investing with just a few clicks</div>
-        <div class="imagesteps">
+        <div class="message-three">Open an account, set your savings goal, and start investing with just a few clicks</div>
+        <div class="image-steps">
             <div class="register"><img src="assets/register.jpg" alt="Register">1. Register</div>
             <div class="bank"><img src="assets/connectbank.jpg" alt="Connect bank">2. Connect to bank</div>
             <div class="goal"><img src="assets/savinggoal.jpg" alt="Set saving goal">3. Set saving goal</div>
@@ -48,7 +48,7 @@
         <div>We are expanding our better group!</div>
         <div>Be at the top of the list by signing up now!</div>
         </div>
-        <div class="buttontwo"><button>Sign up</button></div>
+        <div class="light"><button>Sign up</button></div>
     </div>
     <div class="footer">
         <div class="rights">All Rights Reserved | All Wrongs Reversed</div>
