Changed color of quote and modified fonts for message four and five

--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
         <div class="quote">
             It's not how much you make, but how much you keep, how hard it works for and how many generations you keep it for
         </div>
-        <div class="author">
+        <div class="author"><div>
             - Robert Kiyosaki
-        </div>
+        </div></div>
     </div>
     <div class="action">
         <div class="messages">
-        <div>We are expanding our better group!</div>
-        <div>Be at the top of the list by signing up now!</div>
+        <div class="message-four">We are expanding our better group!</div>
+        <div class="message-five">Be at the top of the list by signing up now!</div>
         </div>
-        <div class="light"><button>Sign up</button></div>
+        <button class="light">Sign up</button>
     </div>
     <div class="footer">
         <div class="rights">All Rights Reserved | All Wrongs Reversed</div>
         <div class="conditions"><a>Terms & Conditions | Privacy Policy | Disclaimer</a></div>
-        <div>Copyright &copy; Mobcash Inc, its affiliates, assigns and licensors</div>
+        <div>Copyright &copy; 2023 Mobcash Inc, its affiliates, assigns and licensors</div>
     </div>
 </body>
 </html>
